correct paragraph spacing

--- a/styles/index.css
+++ b/styles/index.css
@@ -20,9 +20,6 @@
     position: absolute;
 }
 
-
-
-
 /*LEFT SIDE*/
 .left{
    background-image: url(https://images.unsplash.com/photo-1553361371-9b22f78e8b1d?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=687&q=80);
@@ -44,11 +41,10 @@
     gap: 10px;
     align-items: center;
     width: 100%;
-    line-height: 2rem;
 }
 
 .odin{
-    height: 5vw;
+    height: 7vw;
 }
 
 
@@ -68,6 +64,11 @@
 
 .dummy-text{
     padding: 2vw;
+    font-size: 1.2rem;
+}
+
+.dummy-text p{
+    margin: 1em;
 }
 
 
